# projected-langevin-sampling

./: .coverage  .gitignore  README.md  pyproject.toml
experiments/: constructors.py  data.py  early_stopper.py  energy_potential.py  loaders.py  metrics.py  plotters.py  preprocess.py  runners.py  trainers.py  utils.py
experiments/curves/: config.yaml  curves.py  main.py
experiments/curves/classification/: config.yaml  main.py
experiments/curves/growth_model/: main.py  simulate_data.py
experiments/curves/mixture_likelihood/: config.yaml  example_plot.py  main.py  markdown.md
experiments/curves/poisson_regression/: config.yaml  main.py
experiments/curves/profiler/: config.yaml  main.py
experiments/curves/regression/: config.yaml  main.py
experiments/curves/student_t_regression/: config.yaml  main.py
experiments/curves/student_t_regression_ood/: config.yaml  main.py
experiments/profiler/: main.py
experiments/uci/: config.yaml  constants.py  generate_shell_commands.py  main.py  schemas.py
experiments/uci/classification/: config.yaml  main.py
mockers/: __init__.py  basis.py  cost.py  kernel.py
src/: bisection_search.py  custom_types.py  distributions.py  samplers.py  utils.py
src/conformalise/: __init__.py  base.py  gp.py  gradient_flow.py  pls.py
src/gaussian_process/: __init__.py  exact_gp.py  svgp.py
src/gps/: exact_gp.py  svgp.py  svgp_regression.py
src/gradient_flows/: __init__.py  base.py  binary_classification.py  classification_nonb.py  classification_onb.py  eigenvalue_regression.py  multimodal.py  projected_wasserstein.py  regression.py  regression_nonb.py  regression_onb.py
src/hyper_opt/: costs.py  learn_hyper.py  make_sample.py  utils.py
src/induce_data_selectors/: __init__.py  conditional_variance.py  induce_data_selector.py  random.py
src/inducing_point_selectors/: __init__.py  conditional_variance.py  random.py
src/kernels/: __init__.py  base.py  gradient_flow_kernel.py  gradient_flow_nonb_kernel.py  gradient_flow_onb_kernel.py  projected_langevin_sampling.py
src/projected_langevin_sampling/: __init__.py  classification_ipb.py  classification_onb.py  custom_types.py  distributions.py  kernel.py  link_functions.py  poisson_regression_ipb.py  poisson_regression_onb.py  projected_langevin_sampling.py  regression_ipb.py  regression_onb.py  samplers.py  utils.py
src/temper/: __init__.py  base.py  gp.py  gradient_flow.py  pls.py
tests/: test_basis.py  test_bisection_search.py  test_conformalise.py  test_conformalise_gp.py  test_conformalise_gradient_flow.py  test_costs.py  test_device_dtype.py  test_distributions.py  test_gp.py  test_gradient_flow_binary_classification.py  test_gradient_flow_kernel.py  test_gradient_flow_regression.py  test_induce_data_selectors.py  test_inducing_point_selectors.py  test_pls.py  test_pls_kernel.py  test_pls_regression.py  test_projected_wasserstein_gradient_flow.py  test_samplers.py  test_set_seed.py  test_temper.py  test_temper_gp.py  test_temper_gradient_flow.py
(+41 files in other folders)
