[tool.poetry]
name = "function-space-gradient-flow"
version = "0.0.0"
description = "Implementation of Projected Langevin Sampling for Function Space Gradient Flows"
authors = [
    "James Wu <jswu18@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies
matplotlib = "^3.6.2"
gpytorch = "^1.11"
pandas = "^2.2.0"
torch = "^2.1.0"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}
tqdm = "^4.65.0"
ipykernel = "^6.20.1"
isort = "^5.12"
mock = "^5.0.2"
pytest = "^7.4"
pytest-cov = "^4.1.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[tool.isort]
skip = [".venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
