[project]
name = "projected-langevin-sampling"
version = "0.0.0"
description = "Implementation of Near-Optimal Approximations for Bayesian Inference in Function Space"
authors = [
    { name = "James Wu", email = "jswu18@gmail.com" },
    { name = "Veit D. Wild", email = "veit.wild@stats.ox.ac.uk" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "matplotlib>=3.6.2,<4.0.0",
    "gpytorch>=1.11,<2.0",
    "pandas>=2.2.0,<3.0.0",
    "torch>=2.1.0,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "tensorflow-probability>=0.24.0,<0.25.0",
    "tensorflow>=2.16.1,<3.0.0",
    "tf-keras>=2.16.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=69.0.3"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black[jupyter]>=23.9.1,<24.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "ipykernel>=6.20.1,<7.0.0",
    "isort>=5.12,<6.0",
    "mock>=5.0.2,<6.0.0",
    "pytest>=7.4,<8.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "setuptools>=69.0.3,<70.0.0",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["projected_langevin_sampling*", "experiments*", "mockers*"]

[tool.isort]
profile = "black"
skip = [".venv"]
